k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mental-health-api-service
  namespace: mental-health
  labels:
    app: mental-health-api
spec:
  selector:
    app: mental-health-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
